--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/310f6c4b67.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>JustStreamIt</title>
 </head>
 
@@ -16,7 +17,7 @@
         <ul>
             <li><a href="">ACCUEIL</a></li>
             <li><a href="">MA LISTE</a></li>
-            <li><a href="">MON COMPTE</a></li>
+            <li><a href=""><i class="fa-solid fa-2x fa-user"></i></a></li>
         </ul>
     </nav>
 
@@ -26,36 +27,49 @@
             <p>2010 - Drama - 94 minutes</p>
             <p>A young violinist with leukemia brings hope and life into a desolate Russian hospital for children.</p>
             <button class="btn-play">Lecture</button>
-            <button class="btn-more display-container">Détails</button>
+            <button onclick="openModal('1508669')" class="open-modal btn-more display-container">Détails</button>
         </aside>
     </section>
+    <section id="categorys">
 
-    <section id="best-rated">
-        <h2>Les mieux notés</h2>
     </section>
-
-    <section id="horror">
-        <h2>Films d'horreur du moment</h2>
-    </section>
-
-    <section id="thriller">
-        <h2>Les thrillers du moment</h2>
-    </section>
-
-    <section id="comedy">
-        <h2>Les comédies du moment</h2>
-    </section>
-
-    <section class="container">
+    <article class="modal">
         <div class="overlay display-container"></div>
-        <aside class="content">
-            <div class="btn-close display-container">X</div>
-            <h3>Mon titre</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, officia harum. Quae ratione
-                dignissimos numquam?</p>
-        </aside>
-    </section>
-    <script src="modal.js"></script>
+        <section class="content">
+            <button class="btn-close display-container">X</button>
+            <aside class="informations">
+                <img class="cover-movie" src="#" alt="#">
+                <section style="font-size: 14px;">
+                    <h2 class="modal-title-movie">Hopeful Notes</h2>
+                    <p class="modal-details-movie" style="color: rgb(177, 177, 177);">Drama • 94 minutes • USA •
+                        2010-12-15</p>
+                    <p class="rated" style="color: rgb(177, 177, 177);">Not rated or unkown rating</p>
+                    <p style="color: rgb(177, 177, 177);">Score imdb : <span class="score-imdb"
+                            style="color:#13649F;">9.6 / 10</span></p>
+                    <p style="color: rgb(177, 177, 177);">Réalisateurs : <span class="directors"
+                            style="color:#13649F;">Valerio
+                            Zanoli</span></p>
+                    <p style="color: rgb(177, 177, 177);">Acteurs : <span class="actors" style="color:#13649F;">Abeni
+                            Wimbush,
+                            Colin Ross, Dennis Janiske, Grace
+                            Heemstra, Ian Poland,
+                            Kaitlyn
+                            Squires, Kimberly Harsch,
+                            Laural Merlington,
+                            Lori Silvey,
+                            Nicholas Sarjeant,
+                            Robert Gray,
+                            Rocky Rector,
+                            Sharon Hayes,
+                            Walter Nudo</span></p>
+                    <p class="resume-movie">A young violinist with leukemia brings hope and life into a desolate Russian
+                        hospital
+                        for
+                        children.</p>
+                </section>
+            </aside>
+        </section>
+    </article>
 </body>
 <footer class="footer">
     <nav id="menu-footer">
