Modifications de la structure HTML

--- a/index.html
+++ b/index.html
@@ -40,32 +40,16 @@
             <aside class="informations">
                 <img class="cover-movie" src="#" alt="#">
                 <section style="font-size: 14px;">
-                    <h2 class="modal-title-movie">Hopeful Notes</h2>
-                    <p class="modal-details-movie" style="color: rgb(177, 177, 177);">Drama • 94 minutes • USA •
-                        2010-12-15</p>
-                    <p class="rated" style="color: rgb(177, 177, 177);">Not rated or unkown rating</p>
+                    <h2 class="modal-title-movie"></h2>
+                    <p class="modal-details-movie" style="color: rgb(177, 177, 177);"></p>
+                    <p class="rated" style="color: rgb(177, 177, 177);"></p>
                     <p style="color: rgb(177, 177, 177);">Score imdb : <span class="score-imdb"
-                            style="color:#13649F;">9.6 / 10</span></p>
+                            style="color:#13649F;"></span></p>
                     <p style="color: rgb(177, 177, 177);">Réalisateurs : <span class="directors"
-                            style="color:#13649F;">Valerio
-                            Zanoli</span></p>
-                    <p style="color: rgb(177, 177, 177);">Acteurs : <span class="actors" style="color:#13649F;">Abeni
-                            Wimbush,
-                            Colin Ross, Dennis Janiske, Grace
-                            Heemstra, Ian Poland,
-                            Kaitlyn
-                            Squires, Kimberly Harsch,
-                            Laural Merlington,
-                            Lori Silvey,
-                            Nicholas Sarjeant,
-                            Robert Gray,
-                            Rocky Rector,
-                            Sharon Hayes,
-                            Walter Nudo</span></p>
-                    <p class="resume-movie">A young violinist with leukemia brings hope and life into a desolate Russian
-                        hospital
-                        for
-                        children.</p>
+                            style="color:#13649F;"></span></p>
+                    <p style="color: rgb(177, 177, 177);">Acteurs : <span class="actors" style="color:#13649F;"></span>
+                    </p>
+                    <p class="resume-movie"></p>
                 </section>
             </aside>
         </section>
