--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </nav>
     <div id="best-movie">
         <aside class="about-movie">
-            <h2>Hopeful Notes</h2>
-            <p>2010 - Drama - 94 minutes</p>
-            <p>A young violinist with leukemia brings hope and life into a desolate Russian hospital for children.</p>
+            <h2 class="title-best-movie">Titre</h2>
             <button class="btn-play">Lecture</button>
             <button onclick="openModal('1508669')" class="open-modal btn-more display-container">Détails</button>
         </aside>
@@ -57,6 +55,7 @@
                     <p class="rated"></p>
                     <p>Score imdb : <span class="score-imdb"></span></p>
                     <p>Réalisateurs : <span class="directors"></span></p>
+                    <p>Box office : <span class="box-office"></span></p>
                     <p>Acteurs : <span class="actors"></span></p>
                     <p class="resume-movie"></p>
                 </section>
