--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/310f6c4b67.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="img/logo_dark.ico" />
     <script src="script.js" defer></script>
     <title>JustStreamIt</title>
 </head>
