--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <section class="info-details">
                     <h2 class="modal-title-movie">title</h2>
                     <p class="modal-details-movie"></p>
-                    <p class="rated"></p>
+                    <p>Rated : <span class="rated"></span></p>
                     <p>Score imdb : <span class="score-imdb"></span></p>
                     <p>Réalisateurs : <span class="directors"></span></p>
                     <p>Box office : <span class="box-office"></span></p>
